# fastbangs-wasm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build.sh
benches/: lookup_bench.rs
ext/: manifest.json  runner.js
src/: lib.rs
